# omnis-sft

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
autoresearch/: README.md  best_config.json  constants.py  experiments.jsonl  program.md  runner.py
data/: README.md  environment_context.json  generate_chains.py  merge_partitions.py  seed_chains.json  tool_catalog.json  validate_data.py
deploy/: Modelfile  README.md  export_gguf.py  orchestrator.py  test_model.py
docs/: implementation_plan.md  omnis_spec.md
eval/: README.md  benchmark.json  eval_runner.py
eval/results/: eval_20260320_180643.json
infra/: setup_instance.sh  upload_to_s3.sh
training/: README.md  config.json  finetune.py
