[project]
name = "omnis-sft"
version = "0.1.0"
description = "Fine-tune Qwen 2.5 7B for autonomous network diagnostics using Omnis MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
training = [
    "unsloth",
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "bitsandbytes",
]
eval = [
    "vllm",
]

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
